--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
-.terraform/
-*.tfstate
-*.tfvars
+ss# Terraform local working directory
+**/.terraform/
+**/.terraform.lock.hcl
+
+# Terraform state files
+**/*.tfstate
+**/*.tfstate.*
+**/terraform.tfstate
+**/terraform.tfstate.backup
+
+# Variable files (often contain secrets)
+**/*.tfvars
+**/*.tfvars.json
+
+# Crash logs
+crash.log
+crash.*.log
+
+# Override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Terraform CLI config
+.terraformrc
+terraform.rc
